; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx_epit.c_epit_et_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx_epit.c_epit_et_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eventtimer = type { i64 }
%struct.epit_softc = type { i32 }

@EPIT_CR = common dso_local global i32 0, align 4
@EPIT_SR = common dso_local global i32 0, align 4
@EPIT_SR_OCIF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eventtimer*)* @epit_et_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @epit_et_stop(%struct.eventtimer* %0) #0 {
  %2 = alloca %struct.eventtimer*, align 8
  %3 = alloca %struct.epit_softc*, align 8
  store %struct.eventtimer* %0, %struct.eventtimer** %2, align 8
  %4 = load %struct.eventtimer*, %struct.eventtimer** %2, align 8
  %5 = getelementptr inbounds %struct.eventtimer, %struct.eventtimer* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.epit_softc*
  store %struct.epit_softc* %7, %struct.epit_softc** %3, align 8
  %8 = load %struct.epit_softc*, %struct.epit_softc** %3, align 8
  %9 = load i32, i32* @EPIT_CR, align 4
  %10 = load %struct.epit_softc*, %struct.epit_softc** %3, align 8
  %11 = getelementptr inbounds %struct.epit_softc, %struct.epit_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @WR4(%struct.epit_softc* %8, i32 %9, i32 %12)
  %14 = load %struct.epit_softc*, %struct.epit_softc** %3, align 8
  %15 = load i32, i32* @EPIT_SR, align 4
  %16 = load i32, i32* @EPIT_SR_OCIF, align 4
  %17 = call i32 @WR4B(%struct.epit_softc* %14, i32 %15, i32 %16)
  ret i32 0
}

declare dso_local i32 @WR4(%struct.epit_softc*, i32, i32) #1

declare dso_local i32 @WR4B(%struct.epit_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
